# pyroms_tools

./: .gitignore  Dockerfile  Dockerfile.v2  README.md  config.yaml  install.sh  pyproject.toml
configs/: README.md  _template_grid_config_esmf.txt  _template_grid_config_pyroms.txt  grid_config_esmf.txt  grid_config_pyroms.txt  gridid.txt
data/: gridid.txt
extrapolate/: meson.build  pyproject.toml
extrapolate/src/bla/: extrapolate.mod  fill.f90
mscripts/: coarse2fine_group.m  matlab_reference.txt
otherscripts/: ecom2roms.py  ecom_sigma2z.py  utils
pyroms_tools/: __init__.py
pyroms_tools/atmos/: config.yaml  make_atmos.py  unstack_era5.py
pyroms_tools/boundary/: boundary_file_build.py  boundary_file_template.py  config.yaml
pyroms_tools/grid/: make_grid2_.py  make_grid_.py  make_grid_prototype.py  make_grid_smooth.py
pyroms_tools/initial/: config.yaml  ic_file_build.py  ic_file_template.py
pyroms_tools/nudging/: config.yaml  make_climatology.py  nudging_file.py
pyroms_tools/rivers/: edit_mask.py
pyroms_tools/tides/: __init__.py  make_tpxo.py  make_tpxo_tide.py
pyroms_tools/utils/: CGrid_glorys.py  __init__.py  atmos_forcing.py  interpolate.f90  interpolate.mod  interpolation.mod  my_fortran_wrapper.py  remap.py  utils.py
pyroms_tools/vertical_interpolation/: interpolate.f90
scripts/: README.md  clear  era2roms.py  make_bdry_files.py  make_bdry_remap_weight_files.py  make_forcing_files.py  make_grid_.py  make_grid_prototype.py  make_grid_smooth.py  make_ic_file.py  make_ic_file_replace.py  make_ic_remap_weight_file.py  make_tpxo_remap_weight_file.py  make_tpxo_tide.py  variables_dict_ecmwf.py
scripts/CGrid_TPXO8/: get_nc_CGrid_TPXO8.py  tidal_ellipse.py
scripts/era_glorys/: era2roms.py  make_bdry_files.py  make_ic_files.py  make_ref_mask.py  make_regular_grid.py  make_remap_weights_file.py  mask_change.txt  match_roms_bathymetry.py
scripts/era_glorys/utils/: CGrid_glorys.py  configs.py  grids.py  remap.py  utils.py
scripts/tpxo/: make_remap_weights_file.py  make_tide.py  teste.py
scripts/utils/: atmos_forcing.py  barnier95.py  extrapolate-f2pywrappers2.f90  fill.f90  grids.py  interpolation.f90  remap.py  remap_bdry.py  tpxo8.py  utils.py  variables_dict_ecmwf.py
scripts_aux/: adjust_bathy.py  bdry_aux.py  brdry_unify.py  grid_add_sponge.py  ic_date_update.py  make_forcing_files.py  make_ic_file_replace.py  matplotlib_mouse.py  merging_era5_files.py  nested_adjust_grids_bathymetry.py  nested_replace_finegrid_bathy.py  spinup_shortcut.py
scripts_aux/rivers_discharge/: change_mask.py  river_template.py  river_test.py
scripts_aux/rivers_discharge/utils/: click_map.py  maskedge.py  utils.py
scripts_xesmf/: make_bdry_file_replace.py  make_climatology.py  make_forcing_files.py  make_forcing_files2.py  make_ic_file_replace.py  nested_adjust_grids_bathymetry.py  nested_grid_eval.py
tools/boundary/: boundary_file_replace.py  boundary_file_template.py  config.yaml
tools/boundary/utils/: remap_bdry.py
tools/grid/: config.yaml  make_grid2_.py  make_grid_prototype.py  make_grid_smooth.py
tools/initial/: config.yaml  gridid.txt  ic_file_build.py  ic_file_template.py
tools/initial/utils/: remap.py
tools/nudging/: make_climatology.py
tools/tides/: make_tpxo.py
vertical_interpolation/: meson.build  pyproject.toml
vertical_interpolation/src/bla/: interpolate.mod
